Fill BoilerActivity.kt, BoilerPresenter.kt. Create new widget BoilerDataView.kt

--- a/app/src/main/res/layout/activity_flat.xml
+++ b/app/src/main/res/layout/activity_flat.xml
@@ -61,20 +61,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/viewNavDrawerBg" />
 
             <Switch
-                android:id="@+id/switchBoiler"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:gravity="center_vertical"
-                android:padding="16dp"
-                android:text="@string/flat_boiler"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/switchAlarm" />
-
-            <Switch
                 android:id="@+id/switchSecurity"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -86,7 +72,7 @@
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/switchBoiler" />
+                app:layout_constraintTop_toBottomOf="@+id/switchAlarm" />
 
             <TextView
                 android:id="@+id/tvNeptun"
@@ -139,6 +125,21 @@
                 app:layout_constraintTop_toTopOf="@+id/tvFire" />
 
             <TextView
+                android:id="@+id/tvBoiler"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:gravity="center_vertical"
+                android:padding="16dp"
+                android:text="@string/flat_boiler"
+                android:background="?attr/selectableItemBackground"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvFire" />
+
+            <TextView
                 android:id="@+id/tvCamera"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -151,7 +152,7 @@
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvFire" />
+                app:layout_constraintTop_toBottomOf="@+id/tvBoiler" />
 
             <TextView
                 android:id="@+id/tvDanfoss"
