--- a/app/src/main/res/layout/activity_boiler.xml
+++ b/app/src/main/res/layout/activity_boiler.xml
@@ -3,21 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/windowBackground">
 
     <TextView
-        android:id="@+id/tvBedroomName"
+        android:id="@+id/tvBoilerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:fontFamily="@font/lobster"
-        android:text="@string/title_bedroom"
+        android:text="@string/title_boiler"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/fabMenu"
+        app:layout_constraintBottom_toBottomOf="@id/fabMenu"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabMenu"
@@ -32,6 +33,33 @@
         app:layout_constraintTop_toTopOf="parent"
         app:rippleColor="@color/textWhite"
         app:srcCompat="@drawable/ic_home" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBoilerEnabler"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@id/tvBoilerName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@id/tvBoilerName"
+        app:layout_constraintTop_toTopOf="@id/tvBoilerName"
+        app:srcCompat="@drawable/ic_switch_on" />
+
+    <ProgressBar
+        android:id="@+id/pbBoilerEnableLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/colorPrimary"
+        android:indeterminateTintMode="src_atop"
+        android:visibility="gone"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@id/tvBoilerName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@id/tvBoilerName"
+        app:layout_constraintTop_toTopOf="@id/tvBoilerName"
+        tools:visibility="visible" />
 
     <com.chernysh.timerangepicker.TimePickerView
         android:id="@+id/scheduleTimePicker"
@@ -49,10 +77,10 @@
         app:tpv_range_arc_color="@color/colorPrimaryDark"
         app:tpv_thumb_color="@color/colorPrimaryDark" />
 
-    <LinearLayout
-        android:id="@+id/llPickedTimes"
+    <com.chernysh.smarthome.presentation.widget.BoilerDataView
+        android:id="@+id/boilerDataView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
@@ -61,7 +89,8 @@
         app:layout_constraintBottom_toTopOf="@+id/btnSave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/scheduleTimePicker" />
+        app:layout_constraintTop_toBottomOf="@id/scheduleTimePicker"
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/btnSave"
@@ -70,13 +99,12 @@
         android:layout_marginStart="64dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="32dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/btn_enabled_disabled_background"
         android:text="@string/action_save"
         android:textColor="@color/textWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/llPickedTimes" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
