--- a/app/src/main/res/layout/layout_flat_main.xml
+++ b/app/src/main/res/layout/layout_flat_main.xml
@@ -18,18 +18,20 @@
         app:srcCompat="@drawable/ic_menu" />
 
     <TextView
-            android:id="@+id/tvFlatTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/lobster"
-            android:text="@string/login_chernysh_home_title"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/fabMenu"
-            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.36"/>
+        android:id="@+id/tvFlatTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/lobster"
+        android:text="@string/login_chernysh_home_title"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.36"
+        app:layout_constraintStart_toEndOf="@+id/fabMenu"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <AbsoluteLayout
         android:id="@+id/alFlatPlan"
@@ -104,38 +106,21 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <TextView
-            android:id="@+id/tvHumidity"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:drawableStart="@drawable/ic_humidity"
-            android:drawablePadding="16dp"
-            android:gravity="center_vertical|start"
-            android:textColor="@color/textPrimary"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            tools:text="35%" android:fontFamily="@font/roboto_light"/>
-
-    <TextView
-            android:id="@+id/tvTemperature"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:drawableStart="@drawable/ic_thermometer"
-            android:drawablePadding="16dp"
-            android:gravity="center_vertical|start"
-            android:textColor="@color/textPrimary"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@id/tvHumidity"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            tools:text="18.2" android:fontFamily="@font/roboto_light"/>
+        android:id="@+id/tvTemperature"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:drawableStart="@drawable/ic_thermometer"
+        android:drawablePadding="16dp"
+        android:gravity="center_vertical|start"
+        android:textColor="@color/textPrimary"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        tools:text="18.2" />
 
     <TextView
         android:layout_width="0dp"
